# SlipRock

./: .cproject  .errno.lua.swp  .gitignore  .project  .travis-ci.sh.swp  .travis.yml  .ycm_extra_conf.py  CMakeCache.txt  CMakeLists.txt  LICENSE  README.md  Rakefile  appveyor.yml  build-windows.sh  build.sh  checkers.txt  clang-analyzer-bug.tar.xz  compile_commands.json  config.h.in  dummy.lua  getbuild.awk  output.txt  state_machine.h  strerror.jl  test.bat  travis-ci.sh
cmake/Modules/: FindSodium.cmake
include/: config.h.in  sliprock.h
interactive/: CMakeLists.txt  main.c
src/: .clang-format  CMakeLists.txt  SHA256.c  charset.c  hash_SHA2.h  hash_SHA2_template.c  poll.c  pycrypto_common.h  randombytes_sysrandom.c  sliprock.c  sliprock.cpp  sliprock.cpp~  sliprock.c~  sliprock.h  sliprock.h~  sliprock_internals.h  sliprock_poll.h  sliprock_unix.h  sliprock_windows.c  sliprock_windows.h  state_machine.c  state_machine.h  stringbuf.h  test.cpp
test/: CMakeLists.txt  test.cpp
uv/: sliprock_libuv.c  sliprock_libuv.h
wip/: CMakeLists.txt  state_machine.c  state_machine_init.c
