set(my_targets sliprock sliprock_static)
add_library(sliprock_static STATIC sliprock.c randombytes_sysrandom.c)
add_library(sliprock SHARED sliprock.c randombytes_sysrandom.c)

if (WIN32)
   target_link_libraries(${my_targets} userenv advapi)
endif()
if (GTEST_FOUND AND NOT DEFINED SLIPROCK_NO_TESTS)
   enable_language(CXX)
   set(SLIPROCK_ENABLE_TEST ON)
   find_package(Threads REQUIRED)
else()
   message(WARNING "Tests disabled")
   find_package(Threads)
endif()

if (SLIPROCK_ENABLE_TEST)
   set (CMAKE_CXX_STANDARD 11)
   enable_testing()
   add_executable(mytest test.cpp)
   target_link_libraries(mytest GTest::GTest GTest::Main Threads::Threads sliprock)
   if (WIN32)
      target_link_libraries(mytest -static-libstdc++ -static-libgcc)
   elseif (THREADS_HAVE_PTHREAD_ARG)
      target_link_libraries(mytest -pthread)
   endif()
   list(APPEND my_targets mytest)
   add_test(main mytest)
endif()

if (THREADS_FOUND)
   foreach(i ${my_targets})
      if (THREADS_HAVE_PTHREAD_ARG)
         target_compile_options("${i}" PUBLIC "-pthread")
      endif()
      if (CMAKE_THREAD_LIBS_INIT)
         target_link_libraries("${i}" "${CMAKE_THREAD_LIBS_INIT}")
      endif()
   endforeach()
else()
   message(WARNING "no thread package - SlipRock initializiation will be thread-unsafe")
endif()

install(TARGETS sliprock sliprock_static DESTINATION "${CMAKE_INSTALL_LIBDIR}")
